[project]
name = "tes-padi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "solarsyntax", email = "optimistic.eth@gmail.com"},
]
dependencies = ["streamlit>=1.46.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
